no time overlap request fix

--- a/MiniAppFrontend/src/app/features/result-view/components/result-date-info-modal/result-date-info-modal.component.scss
+++ b/MiniAppFrontend/src/app/features/result-view/components/result-date-info-modal/result-date-info-modal.component.scss
@@ -16,7 +16,7 @@ ion-modal {
     margin: 0;
   }
 
-  .ion-activated {
+  ion-chip {
     pointer-events: none;
     margin: 0;
   }
